fixed review alignment

--- a/css/style.css
+++ b/css/style.css
@@ -404,7 +404,7 @@ td.text-right {
 /* REVIEW TEXT */
 #useful-rev {
     background-color:#F15C00;
-    margin: 60px;
+    margin: 40px;
     color: white;
 }
 
@@ -415,7 +415,7 @@ td.text-right {
 
 #funny-rev {
     background-color:#41A700;
-    margin: 60px;
+    margin: 40px;
     color: white;
 }
 
@@ -426,7 +426,7 @@ td.text-right {
 
 #cool-rev {
     background-color:#0097EC;
-    margin: 60px;
+    margin: 40px;
     color: white;
 }
 
@@ -437,7 +437,7 @@ td.text-right {
 
 #notUseful-rev {
     background-color: #c97435;
-    margin: 60px;
+    margin: 40px;
     color: white;
 }
 
@@ -448,7 +448,7 @@ td.text-right {
 
 #notFunny-rev {
     background-color: #547843;
-    margin: 60px;
+    margin: 40px;
     color: white;
 }
 
@@ -459,7 +459,7 @@ td.text-right {
 
 #notCool-rev {
     background-color: #4889ba;
-    margin: 60px;
+    margin: 40px;
     color: white;
 }
 
